<resources>
    <string name="app_name">TicTacToeUnlimited</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_to_tictactoe_unlimited">Welcome to TicTacToe Unlimited</string>
    <string name="start_game_with_friends">Start game with friends</string>
    <string name="start_game_with_computer">Start game with Computer</string>
    <string name="quit">Quit</string>
    <string name="your_result">Your result:</string>
    <string name="main_menu">Main Menu</string>
    <string name="retry">Retry</string>
    <string name="end_game">End game</string>
    <string name="back">Back</string>
    <string name="rules">Rules</string>
    <string name="rulesText">Tic-tac-toe is a paper-and-pencil game for two players who take turns
        marking the spaces in a three-by-three grid with X or O. The player who succeeds in placing
        three of their marks in a horizontal, vertical, or diagonal row is the winner. It is a
        solved game, with a forced draw assuming best play from both players.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>