<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_gradient_drawable"
    tools:context=".StartFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome_to_tictactoe_unlimited"
        android:textColor="#45322E"
        android:textSize="35sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="150sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/startGameWithFriendBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/click_button_gradient_drawable"
            android:gravity="center"
            android:text="@string/start_game_with_friends"
            android:textSize="20sp"
            android:layout_marginBottom="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/startGameWithComputerBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/click_button_gradient_drawable"
            android:gravity="center"
            android:text="@string/start_game_with_computer"
            android:textSize="20sp"
            android:layout_marginBottom="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startGameWithFriendBtn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/click_button_gradient_drawable"
            android:gravity="center"
            android:text="@string/rules"
            android:textSize="20sp"
            android:layout_marginBottom="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startGameWithComputerBtn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/quit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/click_button_gradient_drawable"
            android:gravity="center"
            android:text="@string/quit"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/options" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>